--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,22 @@
                 <source>1.7</source>
                 <target>1.7</target>
             </configuration>
-        </plugin>
+		</plugin>
+		<plugin>
+			<!-- Build an executable JAR -->
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-jar-plugin</artifactId>
+			<version>3.1.0</version>
+			<configuration>
+			  <archive>
+				<manifest>
+				  <addClasspath>true</addClasspath>
+				  <classpathPrefix>lib/</classpathPrefix>
+				  <mainClass>in.javahome.myMain</mainClass>
+				</manifest>
+			  </archive>
+			</configuration>
+		</plugin>
     </plugins>
 </build>
 	
